<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#DAEAFF"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logoname"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/logintext1"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logintext1"
        android:textColor="#663D21"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/logintext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logintext2"
        android:textColor="#663D21"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LoginMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintmail"
            android:textColor="#663D21"
            android:textColorHint="#5D4037" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LoginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#663D21" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#00F2A6"
        android:text="@string/btn1login"
        android:textColor="#663D21"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/logintext3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logintext3"
        android:textColor="#663D21"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#FFE590"
        android:text="@string/btn2login"
        android:textColor="#663D21"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
